--- a/webscrap_2.ipynb
+++ b/webscrap_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "e451b2dd",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "c3ebc19c",
    "metadata": {
     "scrolled": true
@@ -44,7 +44,7 @@
     "#loop to open the links\n",
     "#then I gather the links inside each page\n",
     "\n",
-    "pages = list(range(0,460,30))\n",
+    "pages = list(range(0,480,30))\n",
     "#loop\n",
     "\n",
     "urls_list = []\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "d1a8e791",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
        " 'https://www.gov.br/planalto/pt-br/acompanhe-o-planalto/discursos?b_start:int=450']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "46d93ba7",
    "metadata": {},
    "outputs": [],
    "source": [
     "#scraping of the source code of the pages\n",
     "#counter\n",
-    "counter = 16\n",
+    "counter = 17\n",
     "\n",
     "#creating the function\n",
     "\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "627e6c1b",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "323f0a50",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "4ede49ee",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "106f1b5c",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "fb83a2a4",
    "metadata": {},
    "outputs": [],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "b12cff3c",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "b6833a3d",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "c467bb7d",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "3139e9f4",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "71a954aa",
    "metadata": {},
    "outputs": [],
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "fa6bf45a",
    "metadata": {},
    "outputs": [],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "7d1c90c4",
    "metadata": {},
    "outputs": [],
@@ -312,17 +312,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "e6d36023",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "475"
+       "480"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,25 +334,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "fa6143bd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<p><span><span> </span></span></p>,\n",
-       " <p dir=\"ltr\"><span>Senhores e senhoras,</span></p>,\n",
-       " <p><span><span> </span></span></p>,\n",
-       " <p dir=\"ltr\" style=\"text-align: justify; \"><span>É uma satisfação muito grande voltar a essa Casa, a qual eu integrei por 28 anos. Realmente rever amigos, conhecer novas pessoas, ver de perto novamente vocês, não tem preço.</span></p>,\n",
-       " <p dir=\"ltr\" style=\"text-align: justify; \"><span>Nós só podemos pensar no Brasil melhor, a partir do momento que nós estivermos perfeitamente sintonizados. É dessa forma que se constrói uma grande nação e nós temos potencial para isso e muito mais. O mundo tem uma expectativa muito grande, o que nós temos aqui, o que nós produzimos e no que nós podemos fazer em parceria com todo mundo.</span></p>,\n",
-       " <p dir=\"ltr\" style=\"text-align: justify; \"><span>Essa condecoração proposta pelo major Vitor Hugo, meu colega de Academia Militar das Agulhas Negras, muito me honra. Tô muito feliz nesse momento. Eu espero cada vez mais poder interagir com todos vocês, de modo que possamos escrever realmente uma linda história para nossa nação.</span></p>,\n",
-       " <p dir=\"ltr\" style=\"text-align: justify; \"><span>Meu amigo de muito tempo e de partido por algum tempo, Arthur Lira, muito obrigado pela deferência e pela forma como você se relaciona conosco. Nós somos todos aqui, o futuro que o Brasil espera e tenho certeza, que irmanados, nós conseguiremos cada vez mais, proporcionar dias melhores à nossa população.</span></p>,\n",
-       " <p dir=\"ltr\" style=\"text-align: justify; \"><span> Muito obrigado a todos vocês, estou muito feliz de estar aqui mais uma vez. Muito obrigado. </span></p>,\n",
-       " <p dir=\"ltr\"> </p>]"
+       "[<p class=\"content-textcontainer\">Boa noite a todos!</p>,\n",
+       " <p class=\"content-textcontainer\">Sob a proteção de Deus, chegamos a mais um Natal.</p>,\n",
+       " <p class=\"content-textcontainer\">Um tempo especial na vida de todos os brasileiros. Tempo de agradecer, construir e confraternizar.</p>,\n",
+       " <p class=\"content-textcontainer\">Estamos finalizando mais um ano. Um ano de muitas dificuldades. Contudo, não nos faltaram seriedade, dedicação e espírito fraterno no planejamento e na construção de políticas públicas em prol de todas as famílias brasileiras.</p>,\n",
+       " <p class=\"content-textcontainer\">Em tempos de incertezas e desafios, confirmamos o que já sabíamos, que podemos confiar em nosso povo, em nosso amado Brasil e em Deus.</p>,\n",
+       " <p class=\"content-textcontainer\">Com dignidade e respeito ao próximo, não economizamos esforços para apoiar a todos, em especial, os mais vulneráveis.</p>,\n",
+       " <p class=\"content-textcontainer\">Não nos afastamos, em nenhum momento, do que acreditamos e defendemos: Deus, Pátria, Família e Liberdade.</p>,\n",
+       " <p class=\"content-textcontainer\">Agradecemos a cada brasileiro pela confiança em nosso país.</p>,\n",
+       " <p class=\"content-textcontainer\">Desejamos que todos celebrem este Natal do jeito que amamos, com nossos familiares e amigos.</p>,\n",
+       " <p class=\"content-textcontainer\">Temos a honra de desejar a você e à sua família um Natal abençoado e repleto de alegrias.</p>,\n",
+       " <p class=\"content-textcontainer\">Que 2022 seja um ano de esperança, conquistas e realizações.</p>,\n",
+       " <p class=\"content-textcontainer\">Que Deus proteja às nossas famílias.</p>,\n",
+       " <p class=\"content-textcontainer\">Muito obrigado.</p>]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "a8fb4c4e",
    "metadata": {},
    "outputs": [],
@@ -391,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "id": "0a408078",
    "metadata": {},
    "outputs": [],
@@ -408,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "id": "f579d4db",
    "metadata": {},
    "outputs": [],
@@ -429,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "id": "056b0301",
    "metadata": {},
    "outputs": [],
@@ -444,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "id": "a4c828ff",
    "metadata": {},
    "outputs": [],
@@ -458,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "id": "1a4da458",
    "metadata": {},
    "outputs": [],
@@ -469,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "id": "4913c151",
    "metadata": {},
    "outputs": [],
@@ -480,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "id": "ed428807",
    "metadata": {},
    "outputs": [
@@ -516,42 +520,42 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>bolsonaro</td>\n",
-       "      <td>2021-11-24</td>\n",
+       "      <td>2021-12-24</td>\n",
        "      <td>2021</td>\n",
        "      <td>https://www.gov.br/planalto/pt-br/acompanhe-o-...</td>\n",
-       "      <td>senhores e senhoras e uma satisfacao muito gr...</td>\n",
+       "      <td>boa noite a todos sob a protecao de deus chega...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>bolsonaro</td>\n",
-       "      <td>2021-11-16</td>\n",
+       "      <td>2021-12-17</td>\n",
        "      <td>2021</td>\n",
        "      <td>https://www.gov.br/planalto/pt-br/acompanhe-o-...</td>\n",
-       "      <td>honrado e feliz estou no bahrein e parece que ...</td>\n",
+       "      <td>e com satisfacao que dou as boasvindas a todos...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>bolsonaro</td>\n",
-       "      <td>2021-11-11</td>\n",
+       "      <td>2021-12-16</td>\n",
        "      <td>2021</td>\n",
        "      <td>https://www.gov.br/planalto/pt-br/acompanhe-o-...</td>\n",
-       "      <td>bom dia a todos menos para a primeiradama que...</td>\n",
+       "      <td>a gente colocasse aqui na frente o juca do me...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>bolsonaro</td>\n",
-       "      <td>2021-11-10</td>\n",
+       "      <td>2021-12-16</td>\n",
        "      <td>2021</td>\n",
        "      <td>https://www.gov.br/planalto/pt-br/acompanhe-o-...</td>\n",
-       "      <td>senhores e senhoras boa tarde a gente tem que...</td>\n",
+       "      <td>a gente colocasse aqui na frente o juca do me...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>bolsonaro</td>\n",
-       "      <td>2021-11-07</td>\n",
+       "      <td>2021-12-14</td>\n",
        "      <td>2021</td>\n",
        "      <td>https://www.gov.br/planalto/pt-br/acompanhe-o-...</td>\n",
-       "      <td>boa tarde a todos e uma satisfacao muito gran...</td>\n",
+       "      <td>bom dia a todos e uma satisfacao velos aqui e ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -559,11 +563,11 @@
       ],
       "text/plain": [
        "  presidente       data   ano  \\\n",
-       "0  bolsonaro 2021-11-24  2021   \n",
-       "1  bolsonaro 2021-11-16  2021   \n",
-       "2  bolsonaro 2021-11-11  2021   \n",
-       "3  bolsonaro 2021-11-10  2021   \n",
-       "4  bolsonaro 2021-11-07  2021   \n",
+       "0  bolsonaro 2021-12-24  2021   \n",
+       "1  bolsonaro 2021-12-17  2021   \n",
+       "2  bolsonaro 2021-12-16  2021   \n",
+       "3  bolsonaro 2021-12-16  2021   \n",
+       "4  bolsonaro 2021-12-14  2021   \n",
        "\n",
        "                                                link  \\\n",
        "0  https://www.gov.br/planalto/pt-br/acompanhe-o-...   \n",
@@ -573,14 +577,14 @@
        "4  https://www.gov.br/planalto/pt-br/acompanhe-o-...   \n",
        "\n",
        "                                         transcricao  \n",
-       "0   senhores e senhoras e uma satisfacao muito gr...  \n",
-       "1  honrado e feliz estou no bahrein e parece que ...  \n",
-       "2   bom dia a todos menos para a primeiradama que...  \n",
-       "3   senhores e senhoras boa tarde a gente tem que...  \n",
-       "4   boa tarde a todos e uma satisfacao muito gran...  "
+       "0  boa noite a todos sob a protecao de deus chega...  \n",
+       "1  e com satisfacao que dou as boasvindas a todos...  \n",
+       "2   a gente colocasse aqui na frente o juca do me...  \n",
+       "3   a gente colocasse aqui na frente o juca do me...  \n",
+       "4  bom dia a todos e uma satisfacao velos aqui e ...  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "id": "47b2a73c",
    "metadata": {},
    "outputs": [],
